--- a/8milions/index.html
+++ b/8milions/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>8 Million Little Stars — Unique Piece</title>
-  <meta name="description" content="Unique digital art piece '8 Million Little Stars' — 1/1 edition with Certificate of Authenticity (COA)." />
+  <title>8 Million Little Stars â€” Unique Piece</title>
+  <meta name="description" content="Unique digital art piece '8 Million Little Stars' â€” 1/1 edition with Certificate of Authenticity (COA)." />
   <meta name="author" content="Seller/Artist" />
 
   <!-- Minimal styling -->
@@ -55,27 +55,11 @@ Delivered with a Certificate of Authenticity (COA) digitally signed by the issue
 This piece is precious: it is a 1/1 (unique), designed for collectors who value emotion, symbolism, and exclusivity.
         </div>
 
-        <div class="feature-list">
-          • Edition: <strong>1 of 1 (unique)</strong><br/>
-          • COA: <strong>Certificate of Authenticity</strong><br/>
-          • Delivery: High-resolution digital file + COA in PDF.
-        </div>
-
-        <h3 style="margin-top:18px">Technical Details</h3>
-        <ul class="meta">
-          <li>Image format: PNG (high resolution)</li>
-          <li>COA file: PDF</li>
-          <li>Includes unique certificate number and signature field</li>
-        </ul>
-
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;">
           <!-- Buy button: replace href with your payment link (Stripe/PayPal) -->
           <form id="buyForm" action="#" onsubmit="event.preventDefault(); onBuy();">
             <button type="submit" class="btn-buy">$20000 USD   Buy Unique Piece</button>
           </form>
-
-          <a class="btn-secondary" href="COA_certificate_EN.pdf" download>Download COA (EN)</a>
-        </div>
 
         <div style="margin-top:16px; color:var(--muted); font-size:13px;">
           <strong>Note:</strong> After purchase, the original file and digitally signed COA will be delivered. Instructions for COA validation can also be provided.
@@ -85,7 +69,7 @@ This piece is precious: it is a 1/1 (unique), designed for collectors who value 
       <!-- Right: Art preview + pricing/metadata -->
       <aside class="card" aria-labelledby="preview">
         <h3 id="preview">Preview</h3>
-        <img class="art-img" src="stars_8m.png" alt="8 Million Little Stars — preview" />
+        <img class="art-img" src="stars_8m.png" alt="8 Million Little Stars â€” preview" />
 
         <div style="margin-top:14px; display:flex; justify-content:space-between; align-items:center;">
           <div>
@@ -106,7 +90,7 @@ This piece is precious: it is a 1/1 (unique), designed for collectors who value 
     </main>
 
     <footer>
-      <p>Copyright © <span id="year"></span> Seller/Artist — All sales are final for this unique 1/1 piece.</p>
+      <p>Copyright Â© <span id="year"></span> Seller/Artist â€” All sales are final for this unique 1/1 piece.</p>
     </footer>
   </div>
 
@@ -122,7 +106,6 @@ This piece is precious: it is a 1/1 (unique), designed for collectors who value 
     function onBuy(){
       const proceed = confirm("You are about to purchase the unique piece for $20000 USD. Continue to payment?");
       if(proceed){
-        window.location.href = "COA_certificate_EN.pdf";
       }
     }
 
@@ -151,3 +134,4 @@ This piece is precious: it is a 1/1 (unique), designed for collectors who value 
   </script>
 </body>
 </html>
+
