--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>8 Million Little Stars — Peça Única</title>
-  <meta name="description" content="Unique digital art piece '8 Million Little Stars' — 1/1 edition with Certificate of Authenticity (COA)." />
+  <title>8 Million Little Stars â€” PeÃ§a Ãšnica</title>
+  <meta name="description" content="Unique digital art piece '8 Million Little Stars' â€” 1/1 edition with Certificate of Authenticity (COA)." />
   <meta name="author" content="Vendedor/Artista" />
 
   <!-- Minimal styling -->
@@ -38,8 +38,8 @@
   <div class="container">
     <header>
       <div class="logo">
-        <h1>8 Million Little Stars — Peça Única (1/1)</h1>
-        <p class="lead">A unique, complete work, with a Certificate of Authenticity. Each star carries meaning—this piece is your story.</p>
+        <h1>8 Million Little Stars â€” PeÃ§a Ãšnica (1/1)</h1>
+        <p class="lead">A unique, complete work, with a Certificate of Authenticity. Each star carries meaningâ€”this piece is your story.</p>
       </div>
     </header>
 
@@ -50,43 +50,43 @@
         <div class="story">
 The piece of art "8 Million Little Stars" nasceu da ideia de Piece with 8 million stars, considered a masterpiece, with its creation time made by a young man in a small town on the coast reflects on extending thoughts and shows that the thoughts that fit in the head, if aligned, reach 8 million outstanding stars.
 
-Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificate of Authenticity (COA) assinado digitalmente pelo emissor.
+Esta peÃ§a Ã© preciosa: Ã© uma ediÃ§Ã£o 1/1 (Ãºnica), entregue com um Certificate of Authenticity (COA) assinado digitalmente pelo emissor.
         </div>
 
         <div class="feature-list">
-          • Edição: <strong>1 de 1 (única)</strong><br/>
-          • Inclui: <strong>Certificate of Authenticity (COA)</strong><br/>
-          • Entrega: Arquivo digital de alta resolução + COA.
+          â€¢ EdiÃ§Ã£o: <strong>1 de 1 (Ãºnica)</strong><br/>
+          â€¢ Inclui: <strong>Certificate of Authenticity (COA)</strong><br/>
+          â€¢ Entrega: Arquivo digital de alta resoluÃ§Ã£o + COA.
         </div>
 
-        <h3 style="margin-top:18px">Detalhes técnicos</h3>
+        <h3 style="margin-top:18px">Detalhes tÃ©cnicos</h3>
         <ul class="meta">
-          <li>Formato da imagem: PNG (alta resolução)</li>
+          <li>Formato da imagem: PNG (alta resoluÃ§Ã£o)</li>
           <li>Arquivo COA: Digital (PDF assinado)</li>
-          <li>Inclui número de certificado único</li>
+          <li>Inclui nÃºmero de certificado Ãºnico</li>
         </ul>
 
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;">
           <form id="buyForm" action="#" onsubmit="event.preventDefault(); onBuy();">
-            <button type="submit" class="btn-buy">$20000 USD  Comprar Peça Única</button>
+            <button type="submit" class="btn-buy">$20000 USD  Comprar PeÃ§a Ãšnica</button>
           </form>
           <button class="btn-secondary" onclick="onContact()">Contactar Vendedor</button>
         </div>
 
         <div style="margin-top:16px; color:var(--muted); font-size:13px;">
-          <strong>Nota:</strong> Após a compra, será entregue o arquivo original em alta qualidade e o COA digitalmente assinado.
+          <strong>Nota:</strong> ApÃ³s a compra, serÃ¡ entregue o arquivo original em alta qualidade e o COA digitalmente assinado.
         </div>
       </section>
 
       <!-- Right: Art preview + pricing/metadata -->
       <aside class="card" aria-labelledby="preview">
         <h3 id="preview">Preview</h3>
-        <img class="art-img" src="imagens/stars_8m.png" alt="8 Million Little Stars — preview" />
+        <img class="art-img" src="imagens/stars_8m.png" alt="8 Million Little Stars â€” preview" />
 
         <div style="margin-top:14px; display:flex; justify-content:space-between; align-items:center;">
           <div>
             <div class="price">$20.000,00 USD</div>
-            <div class="meta">Peça única — Edição 1/1</div>
+            <div class="meta">PeÃ§a Ãºnica â€” EdiÃ§Ã£o 1/1</div>
           </div>
           <div style="text-align:right">
             <div class="meta">COA: Incluso</div>
@@ -97,7 +97,7 @@ Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificate of A
     </main>
 
     <footer>
-      <p>Copyright © <span id="year"></span> Vendedor/Artista — Todas as vendas são finais para esta peça 1/1.</p>
+      <p>Copyright Â© <span id="year"></span> Vendedor/Artista â€” Todas as vendas sÃ£o finais para esta peÃ§a 1/1.</p>
     </footer>
   </div>
 
@@ -107,12 +107,13 @@ Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificate of A
     document.getElementById('year').textContent = new Date().getFullYear();
 
     function onBuy(){
-      alert("Você está prestes a comprar a peça única por $20000 USD. Integração de pagamento deve ser configurada.");
+      alert("VocÃª estÃ¡ prestes a comprar a peÃ§a Ãºnica por $20000 USD. IntegraÃ§Ã£o de pagamento deve ser configurada.");
     }
 
     function onContact(){
-      window.location.href = "mailto:youremail@example.com?subject=Interesse%20na%20Peça%20Única%20-%208%20Million%20Little%20Stars";
+      window.location.href = "mailto:reinertluan18@gmail.com?subject=Interesse%20na%20PeÃ§a%20Ãšnica%20-%208%20Million%20Little%20Stars";
     }
   </script>
 </body>
 </html>
+
