--- a/index.html
+++ b/index.html
@@ -1,17 +1,16 @@
 <!doctype html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>8 Million Little Stars — Peça Única</title>
+  <title>8 Million Little Stars — Unique Piece</title>
   <meta name="description" content="Unique digital art piece '8 Million Little Stars' — 1/1 edition with Certificate of Authenticity (COA)." />
-  <meta name="author" content="Vendedor/Artista" />
+  <meta name="author" content="Luan Reinert" />
 
   <!-- Minimal styling -->
   <style>
     :root{
       --bg:#0b0b12; --card:#0f1720; --accent:#f6c84c; --muted:#cbd5e1;
-      --glass: rgba(255,255,255,0.04);
       font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
     }
     html,body{height:100%; margin:0; background: radial-gradient(ellipse at center, rgba(20,24,32,1) 0%, rgba(8,10,14,1) 60%); color:#fff;}
@@ -25,11 +24,10 @@
     .art-img{width:100%; height:auto; border-radius:8px; display:block; object-fit:cover; border:1px solid rgba(255,255,255,0.04);}
     .price{font-size:26px; color:var(--accent); font-weight:700;}
     .meta{color:var(--muted); font-size:14px;}
-    .btn-buy{background:var(--accent); color:#081018; padding:12px 18px; border-radius:10px; border:0; cursor:pointer; font-weight:700; font-size:16px;}
-    .btn-secondary{background:transparent; border:1px solid rgba(255,255,255,0.08); padding:10px 14px; border-radius:10px; color:var(--muted); cursor:pointer;}
+    .btn-buy{background:var(--accent); color:#081018; padding:12px 18px; border-radius:10px; border:0; cursor:pointer; font-weight:700; font-size:16px; text-decoration:none; display:inline-block;}
+    .btn-secondary{background:transparent; border:1px solid rgba(255,255,255,0.08); padding:10px 14px; border-radius:10px; color:var(--muted); cursor:pointer; text-decoration:none; display:inline-block;}
     .story{white-space:pre-wrap; color:#e6eef8; line-height:1.55;}
     footer{margin-top:36px; color:var(--muted); font-size:13px;}
-    .coabox{display:flex; gap:10px; align-items:center; margin-top:12px;}
     .feature-list{margin-top:18px; color:var(--muted); font-size:15px;}
     @media(max-width:880px){ .grid{grid-template-columns:1fr; } .logo{align-items:flex-start} }
   </style>
@@ -38,43 +36,41 @@
   <div class="container">
     <header>
       <div class="logo">
-        <h1>8 Million Little Stars — Peça Única (1/1)</h1>
-        <p class="lead">A unique, complete work, with a Certificate of Authenticity. Each star carries meaning—this piece is your story.</p>
+        <h1>8 Million Little Stars — Unique Piece (1/1)</h1>
+        <p class="lead">A unique digital masterpiece with Certificate of Authenticity. Each star carries meaning — this piece is your story.</p>
       </div>
     </header>
 
     <main class="grid">
       <!-- Left: Story and details -->
       <section class="card">
-        <h2 style="margin-top:0">8 Million Little Stars</h2>
+        <h2 style="margin-top:0">About the Artwork</h2>
         <div class="story">
-The piece of art "8 Million Little Stars" nasceu da ideia de Piece with 8 million stars, considered a masterpiece, with its creation time made by a young man in a small town on the coast reflects on extending thoughts and shows that the thoughts that fit in the head, if aligned, reach 8 million outstanding stars.
+The digital artwork "8 Million Little Stars" was born from the idea of representing countless aligned thoughts. Created by a young artist from a small coastal town, it symbolizes that the thoughts fitting inside one’s mind, if aligned, can reach 8 million outstanding stars.
 
-Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificate of Authenticity (COA) assinado digitalmente pelo emissor.
+This piece is truly precious: it is a 1/1 edition (unique), delivered with a Certificate of Authenticity (COA) digitally signed by the issuer.
         </div>
 
         <div class="feature-list">
-          • Edição: <strong>1 de 1 (única)</strong><br/>
-          • Inclui: <strong>Certificate of Authenticity (COA)</strong><br/>
-          • Entrega: Arquivo digital de alta resolução + COA.
+          • Edition: <strong>1 of 1 (unique)</strong><br/>
+          • Includes: <strong>Certificate of Authenticity (COA)</strong><br/>
+          • Delivery: High-resolution digital file + COA
         </div>
 
-        <h3 style="margin-top:18px">Detalhes técnicos</h3>
+        <h3 style="margin-top:18px">Technical Details</h3>
         <ul class="meta">
-          <li>Formato da imagem: PNG (alta resolução)</li>
-          <li>Arquivo COA: Digital (PDF assinado)</li>
-          <li>Inclui número de certificado único</li>
+          <li>Image format: PNG (high resolution)</li>
+          <li>Certificate: Digital PDF, signed</li>
+          <li>Unique certificate ID included</li>
         </ul>
 
         <div style="margin-top:18px; display:flex; gap:12px; flex-wrap:wrap;">
-          <form id="buyForm" action="#" onsubmit="event.preventDefault(); onBuy();">
-            <button type="submit" class="btn-buy">$20000 USD  Comprar Peça Única</button>
-          </form>
-          <button class="btn-secondary" onclick="onContact()">Contactar Vendedor</button>
+          <a href="https://pay.kiwify.com/Xl0abQF" target="_blank" class="btn-buy">$20,000 USD — Buy Unique Piece</a>
+          <a class="btn-secondary" href="mailto:reinertluan18@gmail.com?subject=8%20Million%20Little%20Stars%20-%20Inquiry">Contact Seller</a>
         </div>
 
         <div style="margin-top:16px; color:var(--muted); font-size:13px;">
-          <strong>Nota:</strong> Após a compra, será entregue o arquivo original em alta qualidade e o COA digitalmente assinado.
+          <strong>Note:</strong> After purchase, the buyer will receive the original high-resolution file and the digitally signed COA.
         </div>
       </section>
 
@@ -85,19 +81,19 @@ Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificat
 
         <div style="margin-top:14px; display:flex; justify-content:space-between; align-items:center;">
           <div>
-            <div class="price">$20.000,00 USD</div>
-            <div class="meta">Peça única — Edição 1/1</div>
+            <div class="price">$20,000 USD</div>
+            <div class="meta">Unique piece — Edition 1/1</div>
           </div>
           <div style="text-align:right">
-            <div class="meta">COA: Incluso</div>
-            <div class="meta">Emitido: <span id="issueDate">-</span></div>
+            <div class="meta">COA: Included</div>
+            <div class="meta">Issued: <span id="issueDate">-</span></div>
           </div>
         </div>
       </aside>
     </main>
 
     <footer>
-      <p>Copyright © <span id="year"></span> Vendedor/Artista — Todas as vendas são finais para esta peça 1/1.</p>
+      <p>Copyright © <span id="year"></span> Luan Reinert — All sales are final for this 1/1 piece.</p>
     </footer>
   </div>
 
@@ -105,15 +101,6 @@ Esta peça é preciosa: é uma edição 1/1 (única), entregue com um Certificat
     const ISSUE_DATE = (new Date()).toISOString().slice(0,10);
     document.getElementById('issueDate').textContent = ISSUE_DATE;
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    function onBuy(){
-      alert("Você está prestes a comprar a peça única por $20000 USD. Integração de pagamento deve ser configurada.");
-    }
-
-    function onContact(){
-      window.location.href = "mailto:reinertluan18@gmail.com?subject=Interesse%20na%20Peça%20Única%20-%208%20Million%20Little%20Stars";
-    }
   </script>
 </body>
 </html>
-
